# MLPro-Int-Gymnasium

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi_deploy.yml
doc/rtd/: conf.py  index.rst  requirements.txt
doc/rtd/content/01_example_pool/: 01_rl.rst  02_gt.rst
doc/rtd/content/02_api/: 01_envs.rst
doc/rtd/content/03_about/: 01_versions.rst
doc/rtd/content/10_envs_boards/: 01_envs.rst  (+1 more)
src/: setup.py
src/mlpro_int_gymnasium/: __init__.py
src/mlpro_int_gymnasium/boards/: multicartpole.py
src/mlpro_int_gymnasium/envs/: __init__.py  multicartpole.py  rubikscube2x2.py  rubikscube2x2x2.py
src/mlpro_int_gymnasium/wrappers/: __init__.py  basics.py
test/: test_environment.py  test_examples.py
test/howtos/gt/: howto_gt_dg_001_run_multi_player_with_own_policy_on_multicartpole_game_board.py  howto_gt_dg_002_train_own_multi_player_on_multicartpole_game_board.py
test/howtos/rl/: howto_rl_agent_001_run_agent_with_own_policy_on_gym_environment.py  howto_rl_agent_002_train_agent_with_own_policy_on_gym_environment.py  howto_rl_agent_003_run_multiagent_with_own_policy_on_multicartpole_environment.py  howto_rl_agent_004_train_multiagent_with_own_policy_on_multicartpole_environment.py  howto_rl_agent_010_train_agent_ppo_on_rubiks_cube_2x2_environment.py  howto_rl_agent_010_train_agent_ppo_on_rubiks_cube_2x2x2_environment.py  howto_rl_agent_010_train_agent_ppo_on_rubiks_cube_2x2x2_environment.py.off  howto_rl_wp_001_mlpro_environment_to_gymnasium_environment.py  howto_rl_wp_002_gymnasium_environment_to_mlpro_environment.py  rubikscube2x2x2.py
(+17 files in other folders)
