[metadata]
name = mlpro-int-gymnasium
version = 1.0.0
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration Gymnasium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-gymnasium.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro-int-gymnasium.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    mlpro[full]>=1.4.0
    gymnasium[all]>=0.29
